<resources>
    <string name="app_name">Umer Sheraz Task</string>
    <string name="movies">Upcoming Movies</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="overview">Overview:</string>
    <string name="tagLine">Tagline:</string>
    <string name="status">Status</string>
    <string name="releaseDate">Release Date</string>
    <string name="voteAverage">Vote Average</string>
    <string name="title_activity_movie">Movie</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="top_rated">Top Rated</string>
    <string name="popular">Popular</string>
    <string name="now_playing">Now Playing</string>
    <string name="tv_show">TV Show</string>
    <string name="Movie_Detail">Movie Details</string>
    <string name="tv_show_poster">Tv Show Poster</string>
    <string name="on_the_air">On TV</string>
    <string name="airing_today">Airing Today</string>
    <string name="first_air_date">First Air Date</string>
    <string name="tmdb_logo">TMDB Logo</string>
    <string name="no_internet">No internet connection</string>
</resources>
